<resources>
    <string name="app_name">Travel Budget</string>
    <string name="lbl_user">User</string>
    <string name="lbl_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="new_expense">New Expense</string>
    <string name="new_travel">New Travel</string>
    <string name="settings">Settings</string>
    <string name="my_travels">My Travels</string>

    <string-array name="my_travels">
        <item>Cancun</item>
        <item>London and Rome</item>
        <item>Buenos Aires</item>
        <item>Orlando</item>
    </string-array>
</resources>
