<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.mauricioalmeida.travelbudget.DashboardActivity">

    <TextView
        android:id="@+id/lbl_new_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:text="@string/new_expense"
        android:textColor="#333333"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_new_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/lbl_new_expense"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:text="@string/new_travel"
        android:textColor="#333333"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_my_travels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_new_expense"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:text="@string/my_travels"
        android:textColor="#333333"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/lbl_my_travels"
        android:layout_alignRight="@id/lbl_new_travel"
        android:clickable="true"
        android:text="@string/settings"
        android:textColor="#333333"
        android:textStyle="bold" />
</RelativeLayout>
